@@ -6,7 +6,7 @@ bFullScreen=0
 
 [EngineSettings]
 DefaultCameraMoveSpeed=10.000000
-MouseRotationSpeed=30.000000
+MouseRotationSpeed=60.000000
 ForwardKey=119
 BackKey=115
 LeftKey=97
